--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,12 @@ python-multipart==0.0.6
 websockets==11.0.3
 
 # Utilities
-numpy>=1.24.0  # For random delays in actions.py
-colorlog>=6.7.0  # Used in logging_config.py
+colorlog==6.7.0  # Used in logging_config.py
 python-dotenv==1.0.0
-google-generativeai==0.3.1
-
-# Storage
-minio>=7.1.15  # For object storage
 
 # HTTP client
-requests>=2.31.0
-fastapi_websocket_pubsub>=0.3.9
+requests==2.31.0
+fastapi_websocket_pubsub==0.3.9
+
+# System monitoring
+psutil==5.9.0  # Para métricas del sistema
